deprecrate fsspec_impl, add more examples to the s3 docs

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -36,40 +36,70 @@ The auth command gets used by the configuration profile as mentioned above, it a
 
 ## Methods you can use in python
 
-- [FoundryDevTools.get_s3_client](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_client)
-- [FoundryDevTools.get_s3_resource](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_resource)
-- [FoundryDevTools.get_s3_client](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_client)
+- [FoundryRestClient.get_s3_client](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_client)
+- [FoundryRestClient.get_s3_resource](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_resource)
+- [FoundryRestClient.get_s3fs_storage_options](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3fs_storage_options)
+- [FoundryRestClient.get_s3_polars_storage_options](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_polars_storage_options)
 
 ### Examples
 
-# S3Client
+#### S3Client
 
 ```python
 from foundry_dev_tools import FoundryRestClient
+
 fc = FoundryRestClient()
 s3_client = fc.get_s3_client()
-s3_client.list_objects(Bucket="ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e") # replace with a dataset RID of yours
+s3_client.list_objects(
+    Bucket="ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e",
+)  # replace with a dataset RID of yours
 ```
 
-# S3Resource
+#### S3Resource
 
 ```python
 from foundry_dev_tools import FoundryRestClient
+
 fc = FoundryRestClient()
-s3_res = fc.get_s3_client()
-bucket = s3_res.Bucket("ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e") # replace with a dataset RID of yours
-# this should print all filenames in that dataset
-for o in s3.objects.iterator():
-    print(o.key)
+s3_client = fc.get_s3_client()
+s3_client.list_objects(
+    Bucket="ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e",
+)  # replace with a dataset RID of yours
 ```
 
-# Pandas
+#### Pandas
 
 ```python
 import pandas as pd
 from foundry_dev_tools import FoundryRestClient
+
 fc = FoundryRestClient()
 storage_options = fc.get_s3_storage_options()
-df = pd.read_parquet("s3://ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e/spark",storage_options=storage_options) # replace with a dataset RID of yours, should be a dataset with parquet files
+df = pd.read_parquet(
+    "s3://ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e/spark",
+    storage_options=storage_options,
+)  # replace with a dataset RID of yours, should be a dataset with parquet files
+
 print(df)
 ```
+
+#### fsspec
+
+```python
+import fsspec
+from foundry_dev_tools import FoundryRestClient
+
+fc = FoundryRestClient()
+dataset_rid = "ri.foundry.main.dataset.2ce6cb10-59f4-4e19-a3b8-ae3deaf5985e"
+with fsspec.open(f"s3://{dataset_rid}/test.csv", "r", **fc.get_s3fs_storage_options()) as f:
+    print(f.read())
+
+# -------------------
+
+fs = fsspec.filesystem("s3", **fc.get_s3fs_storage_options())
+with fs.open(f"{dataset_rid}/fsspec_test_write.txt", "w") as f:
+    f.write("hihi")
+with fs.open(f"{dataset_rid}/fsspec_test_write.txt", "r") as f:
+    print(f.read())
+
+````
