add xml parse test

--- a/docs/s3.md
+++ b/docs/s3.md
@@ -36,10 +36,9 @@ The auth command gets used by the configuration profile as mentioned above, it a
 
 ## Methods you can use in python
 
-- [FoundryRestClient.get_s3_client](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_client)
-- [FoundryRestClient.get_s3_resource](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_resource)
-- [FoundryRestClient.get_s3fs_storage_options](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3fs_storage_options)
-- [FoundryRestClient.get_s3_polars_storage_options](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3_polars_storage_options)
+- [FoundryRestClient.get_boto3_s3_client](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_boto3_s3_client)
+- [FoundryRestClient.get_boto3_s3_resource](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_boto3_s3_resource)
+- [FoundryRestClient.get_boto3_s3fs_storage_options](#foundry_dev_tools.foundry_api_client.FoundryRestClient.get_s3fs_storage_options)
 
 ### Examples
 
