Add helper function for s3 reading with polars

--- a/docs/getting_started/s3.md
+++ b/docs/getting_started/s3.md
@@ -59,6 +59,9 @@ print(resp['LastModified']) # returns 2023-04-13 09:57:09+00:00
 
 - [](#foundry_dev_tools.clients.s3_client.S3Client.get_boto3_resource)
 ```python
+from foundry_dev_tools import FoundryContext
+
+ctx = FoundryContext()
 s3_resource = ctx.s3.get_boto3_resource()
 obj = s3_resource.Object(
     bucket_name="ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e",  # replace with a dataset RID of yours
@@ -72,6 +75,9 @@ print(obj.last_modified) # returns 2023-04-13 09:57:09+00:00
 - [](#foundry_dev_tools.clients.s3_client.S3Client.get_s3fs_storage_options)
 ```python
 import pandas as pd
+from foundry_dev_tools import FoundryContext
+
+ctx = FoundryContext()
 
 storage_options = ctx.s3.get_s3fs_storage_options()
 df = pd.read_parquet(
@@ -82,10 +88,30 @@ df = pd.read_parquet(
 print(df)
 ```
 
+#### Polars
+
+- [](#foundry_dev_tools.clients.s3_client.S3Client.get_polars_storage_options)
+```python
+import polars as pl
+from foundry_dev_tools import FoundryContext
+
+ctx = FoundryContext()
+storage_options = ctx.s3.get_polars_storage_options()
+df = pl.read_parquet(
+    "s3://ri.foundry.main.dataset.2ce7cb50-41f3-4e22-a6b7-ae4deaf3985e/**/*.parquet",
+    storage_options=storage_options,
+)  # replace with a dataset RID of yours, should be a dataset with parquet files
+
+print(df.head())
+```
+
 #### fsspec
 
 ```python
 import fsspec
+from foundry_dev_tools import FoundryContext
+
+ctx = FoundryContext()
 
 dataset_rid = "ri.foundry.main.dataset.2ce6cb10-59f4-4e19-a3b8-ae3deaf5985e"
 with fsspec.open(f"s3://{dataset_rid}/test.csv", "r", **ctx.s3.get_s3fs_storage_options()) as f:
