add utility method for duckdb to s3 class

--- a/docs/getting_started/s3.md
+++ b/docs/getting_started/s3.md
@@ -105,6 +105,23 @@ df = pl.read_parquet(
 print(df.head())
 ```
 
+#### DuckDb
+
+- [](#foundry_dev_tools.clients.s3_client.S3Client.get_duckdb_create_secret_string)
+```python
+import duckdb
+from foundry_dev_tools import FoundryContext
+
+ctx = FoundryContext()
+
+con = duckdb.connect()
+con.execute(ctx.s3.get_duckdb_create_secret_string())
+
+df = con.execute("SELECT * FROM read_parquet('s3://ri.foundry.main.dataset.d5308d45-9822-4e02-afb9-2704636308ee/**/*.parquet') LIMIT 1;").df()
+
+print(df.head())
+```
+
 #### fsspec
 
 ```python
